recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:9: error: not found: value step
    tree(step+1,length/shrink,360-angle,shrink)
         ^